Renamed API access to ridgeline

--- a/notebooks/Plotting/ridgeline.ipynb
+++ b/notebooks/Plotting/ridgeline.ipynb
@@ -51,7 +51,7 @@
    "id": "2de7b49a-bd26-4a75-aa69-6f659578bb94",
    "metadata": {},
    "source": [
-    "- Make a ridge plot from time series data with `.ridgelineplot()`\n",
+    "- Make a ridge plot from time series data with `.ridgeline()`\n",
     "- This example uses half-hourly air temperature data from 2019\n",
     "- The ridgeline plot usses the kernel density estimator from scikit-learn, see here:\n",
     "    - https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KernelDensity.html\n",
@@ -137,7 +137,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded .parquet file F:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.057 seconds).\n",
+      "Loaded .parquet file L:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.046 seconds).\n",
       "    --> Detected time resolution of <30 * Minutes> / 30min \n"
      ]
     },
@@ -254,7 +254,7 @@
     }
    ],
    "source": [
-    "rp = dv.ridgelineplot(series=series)  # Init RidgePlotTS instance\n",
+    "rp = dv.ridgeline(series=series)  # Init RidgePlotTS instance\n",
     "rp.plot(how=\"monthly\")"
    ]
   },
@@ -341,7 +341,7 @@
     }
    ],
    "source": [
-    "rp = dv.ridgelineplot(series=ta)\n",
+    "rp = dv.ridgeline(series=ta)\n",
     "rp.plot(how=\"yearly\")"
    ]
   },
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "01d76404-eb03-4445-8bb1-8bbcdbd19613",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
     }
    ],
    "source": [
-    "rp = dv.ridgelineplot(series=series)\n",
+    "rp = dv.ridgeline(series=series)\n",
     "rp.plot(how=\"weekly\", fig_height=14, xlim=[-18, 33])"
    ]
   },
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "id": "8eb1cee4-3c2d-497c-a33c-e81fba9d41c1",
    "metadata": {},
    "outputs": [
@@ -517,7 +517,7 @@
     }
    ],
    "source": [
-    "rp = dv.ridgelineplot(series=series)\n",
+    "rp = dv.ridgeline(series=series)\n",
     "rp.plot(\n",
     "    how=\"weekly\",\n",
     "    kd_kwargs=None,  # params from scikit KernelDensity as dict\n",
@@ -563,7 +563,7 @@
     }
    ],
    "source": [
-    "rp = dv.ridgelineplot(series=series)\n",
+    "rp = dv.ridgeline(series=series)\n",
     "rp.plot(\n",
     "    how=\"monthly\",\n",
     "    kd_kwargs={'bandwidth': 0.5, 'kernel': 'tophat'},  # params from scikit KernelDensity as dict\n",
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "fa1363a0-0534-4877-a7bc-ee816607219f",
    "metadata": {},
    "outputs": [],
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "858aa379-5643-4afe-b53f-eb370dee2835",
    "metadata": {
     "ExecuteTime": {
@@ -672,7 +672,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished 2025-03-18 14:59:00\n"
+      "Finished 2025-03-19 23:44:08\n"
      ]
     }
    ],
