--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated**: 18 Mar 2025  \n",
+    "**Last updated**: 19 Mar 2025  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -328,7 +328,7 @@
     "- [Heatmap showing values (z) of time series as year (y) vs month (x)](Plotting/HeatmapYearMonth.ipynb)\n",
     "- [Histogram with options to show z-scores, highlight peak distribution, show counts](Plotting/Histogram.ipynb)\n",
     "- [Long-term anomalies per year](Plotting/LongTermAnomalies.ipynb)\n",
-    "- <b><span style=\"color:#F4511E\">NEW!</span></b> [Ridgeline plot](Plotting/ridgelineplot.ipynb)\n",
+    "- <b><span style=\"color:#F4511E\">NEW!</span></b> [Ridgeline plot](Plotting/ridgeline.ipynb)\n",
     "- [Scatter plot with bins](Plotting/ScatterXY.ipynb)\n",
     "- [Simple (interactive) time series plot](Plotting/TimeSeries.ipynb)"
    ]
