Implement ET from LE conversion

--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated**: 19 Mar 2025  \n",
+    "**Last updated**: 21 Mar 2025  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -82,6 +82,7 @@
    "metadata": {},
    "source": [
     "- [Calculate VPD from TA and RH](CalculateVariable/Calculate_VPD_from_TA_and_RH.ipynb)\n",
+    "- <b><span style=\"color:#F4511E\">NEW in v0.87.0!</span></b> [Calculate ET from LE](CalculateVariable/Calculate_ET_from_LE.ipynb)\n",
     "- [Calculate daytime flag, nighttime flag and potential radiation from latitude and longitude ](CalculateVariable/Daytime_and_nighttime_flag.ipynb)\n",
     "- [Calculate time since last occurrence, e.g. since last precipitation](CalculateVariable/TimeSince.ipynb)\n",
     "- [Calculate lagged variants of variables](CalculateVariable/Create_lagged_variants.ipynb)"
@@ -328,7 +329,7 @@
     "- [Heatmap showing values (z) of time series as year (y) vs month (x)](Plotting/HeatmapYearMonth.ipynb)\n",
     "- [Histogram with options to show z-scores, highlight peak distribution, show counts](Plotting/Histogram.ipynb)\n",
     "- [Long-term anomalies per year](Plotting/LongTermAnomalies.ipynb)\n",
-    "- <b><span style=\"color:#F4511E\">NEW!</span></b> [Ridgeline plot](Plotting/ridgeline.ipynb)\n",
+    "- <b><span style=\"color:#F4511E\">NEW in v0.86.0!</span></b> [Ridgeline plot](Plotting/ridgeline.ipynb)\n",
     "- [Scatter plot with bins](Plotting/ScatterXY.ipynb)\n",
     "- [Simple (interactive) time series plot](Plotting/TimeSeries.ipynb)"
    ]
