--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated**: 21 Mar 2025  \n",
+    "**Last updated**: 23 Mar 2025  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -326,10 +326,10 @@
     "- [Cumulatives per year](Plotting/CumulativesPerYear.ipynb)\n",
     "- [Diel cycle per month](Plotting/DielCycle.ipynb) (for calculating diel cycles without plotting see Resampling/[Calculate diel cycles](Resampling/ResamplingDielCycle.ipynb))\n",
     "- [Heatmap showing values (z) of time series as date (y) vs time (x)](Plotting/HeatmapDateTime.ipynb)\n",
-    "- [Heatmap showing values (z) of time series as year (y) vs month (x)](Plotting/HeatmapYearMonth.ipynb)\n",
+    "- <b><span style=\"color:#66BB6A\">UPDATED in v0.87.0!</span></b> [Heatmap showing values (z) of time series as year (y) vs month (x)](Plotting/HeatmapYearMonth.ipynb)\n",
     "- [Histogram with options to show z-scores, highlight peak distribution, show counts](Plotting/Histogram.ipynb)\n",
     "- [Long-term anomalies per year](Plotting/LongTermAnomalies.ipynb)\n",
-    "- <b><span style=\"color:#F4511E\">NEW in v0.86.0!</span></b> [Ridgeline plot](Plotting/ridgeline.ipynb)\n",
+    "- <b><span style=\"color:#F4511E\">NEW in v0.86.0!</span></b> [Ridgeline plot](Plotting/RidgeLine.ipynb)\n",
     "- [Scatter plot with bins](Plotting/ScatterXY.ipynb)\n",
     "- [Simple (interactive) time series plot](Plotting/TimeSeries.ipynb)"
    ]
@@ -491,7 +491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
