Updated notebook `HeatmapDateTime`

--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -82,7 +82,7 @@
    "metadata": {},
    "source": [
     "- [Calculate VPD from TA and RH](CalculateVariable/Calculate_VPD_from_TA_and_RH.ipynb)\n",
-    "- <b><span style=\"color:#F4511E\">NEW in v0.87.0!</span></b> [Calculate ET from LE](CalculateVariable/Calculate_ET_from_LE.ipynb)\n",
+    "- <b><span style=\"color:#F4511E;background-color:#FFECB3;\">NEW in v0.87.0!</span></b> [Calculate ET from LE](CalculateVariable/Calculate_ET_from_LE.ipynb)\n",
     "- [Calculate daytime flag, nighttime flag and potential radiation from latitude and longitude ](CalculateVariable/Daytime_and_nighttime_flag.ipynb)\n",
     "- [Calculate time since last occurrence, e.g. since last precipitation](CalculateVariable/TimeSince.ipynb)\n",
     "- [Calculate lagged variants of variables](CalculateVariable/Create_lagged_variants.ipynb)"
@@ -325,11 +325,11 @@
     "- [Cumulative sums across all data](Plotting/Cumulative.ipynb)\n",
     "- [Cumulatives per year](Plotting/CumulativesPerYear.ipynb)\n",
     "- [Diel cycle per month](Plotting/DielCycle.ipynb) (for calculating diel cycles without plotting see Resampling/[Calculate diel cycles](Resampling/ResamplingDielCycle.ipynb))\n",
-    "- [Heatmap showing values (z) of time series as date (y) vs time (x)](Plotting/HeatmapDateTime.ipynb)\n",
-    "- <b><span style=\"color:#66BB6A\">UPDATED in v0.87.0!</span></b> [Heatmap showing values (z) of time series as year (y) vs month (x)](Plotting/HeatmapYearMonth.ipynb)\n",
+    "- <b><span style=\"color:#66BB6A;background-color:#E8F5E9;\">UPDATED in v0.87.0!</span></b> [Heatmap showing values (z) of time series as date (y) vs time (x)](Plotting/HeatmapDateTime.ipynb)\n",
+    "- <b><span style=\"color:#66BB6A;background-color:#E8F5E9;\">UPDATED in v0.87.0!</span></b> [Heatmap showing values (z) of time series as year (y) vs month (x)](Plotting/HeatmapYearMonth.ipynb)\n",
     "- [Histogram with options to show z-scores, highlight peak distribution, show counts](Plotting/Histogram.ipynb)\n",
     "- [Long-term anomalies per year](Plotting/LongTermAnomalies.ipynb)\n",
-    "- <b><span style=\"color:#F4511E\">NEW in v0.86.0!</span></b> [Ridgeline plot](Plotting/RidgeLine.ipynb)\n",
+    "- <b><span style=\"color:#F4511E;background-color:#FFECB3;\">NEW in v0.86.0!</span></b> [Ridgeline plot](Plotting/RidgeLine.ipynb)\n",
     "- [Scatter plot with bins](Plotting/ScatterXY.ipynb)\n",
     "- [Simple (interactive) time series plot](Plotting/TimeSeries.ipynb)"
    ]
