Notebook monthly aggregation matrix

--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -383,7 +383,8 @@
    "id": "58392ffb-964e-4d72-b3fe-74023e6a4ca5",
    "metadata": {},
    "source": [
-    "- [Calculate diel cycles](Resampling/ResamplingDielCycle.ipynb) (for plotting diel cycles see Plotting/[Diel cycle per month](Plotting/DielCycle.ipynb))"
+    "- [Diel cycles](Resampling/ResamplingDielCycle.ipynb) (for plotting diel cycles see Plotting/[Diel cycle per month](Resampling/ResamplingDielCycle.ipynb))\n",
+    "- <b><span style=\"color:#F4511E;background-color:#FFECB3;\">NEW in v0.87.0!</span></b> [Monthly aggregation matrix](Resampling/ResamplingMonthlyMatrix.ipynb)"
    ]
   },
   {
