--- a/notebooks/CalculateVariable/Calculate_ET_from_LE.ipynb
+++ b/notebooks/CalculateVariable/Calculate_ET_from_LE.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Notebook version**: `1` (21 Mar 2025)  \n",
+    "**Notebook version**: `1` (24 Mar 2025)  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  "
    ]
   },
@@ -82,6 +82,8 @@
     }
    ],
    "source": [
+    "import diive as dv\n",
+    "\n",
     "import importlib.metadata\n",
     "import warnings\n",
     "from datetime import datetime\n",
@@ -90,7 +92,6 @@
     "import matplotlib.pyplot as plt\n",
     "from diive.configs.exampledata import load_exampledata_EDDYPRO_FLUXNET_CSV_30MIN\n",
     "from diive.core.plotting.heatmap_datetime import HeatmapDateTime  # Used for plotting\n",
-    "from diive.pkgs.createvar.conversions import et_from_le\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "version_diive = importlib.metadata.version(\"diive\")\n",
@@ -146,7 +147,7 @@
     }
    ],
    "source": [
-    "help(et_from_le)"
+    "help(dv.et_from_le)"
    ]
   },
   {
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-22T14:02:22.939757Z",
@@ -229,13 +230,13 @@
        "Freq: 30min, Length: 1488, dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "et = et_from_le(le=le, ta=ta)\n",
+    "et = dv.et_from_le(le=le, ta=ta)\n",
     "et"
    ]
   },
@@ -262,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +280,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +308,7 @@
        "Name: ET_from_EddyPro, dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-22T14:03:26.691641Z",
@@ -412,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-22T14:03:26.927475Z",
@@ -425,7 +426,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished 2025-03-21 10:12:00\n"
+      "Finished 2025-03-24 12:58:16\n"
      ]
     }
    ],
@@ -463,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
