Init heatmap rank notebook

--- a/notebooks/Plotting/HeatmapYearMonthRank.ipynb
+++ b/notebooks/Plotting/HeatmapYearMonthRank.ipynb
@@ -13,8 +13,8 @@
    "id": "7dacfcee-bfcd-43d2-92bd-c433856f82cf",
    "metadata": {},
    "source": [
-    "# **Heatmap per year and month**\n",
-    "`.heatmapyearmonth()`"
+    "# **Heatmap of value ranks per year and month**\n",
+    "`.heatmapyearmonth_ranks()`"
    ]
   },
   {
@@ -23,7 +23,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Notebook version**: `2` (23 Mar 2025)  \n",
+    "**Notebook version**: `1` (24 Mar 2025)  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)"
    ]
   },
