--- a/notebooks/Resampling/ResamplingMonthlyMatrix.ipynb
+++ b/notebooks/Resampling/ResamplingMonthlyMatrix.ipynb
@@ -1289,7 +1289,7 @@
    "metadata": {},
    "source": [
     "# **Matrix of monthly maxima as ranks**\n",
-    "- rank `1` means that the respective month was the warmest across all years, rank `2` means the second warmest, and so on"
+    "- rank `1` means that the respective month had the highest maximum across all years, rank `2` means the second highest, and so on"
    ]
   },
   {
@@ -1862,7 +1862,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.10"
   },
   "toc-autonumbering": false
  },
