--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated**: 23 Mar 2025  \n",
+    "**Last updated**: 24 Mar 2025  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -325,8 +325,9 @@
     "- [Cumulative sums across all data](Plotting/Cumulative.ipynb)\n",
     "- [Cumulatives per year](Plotting/CumulativesPerYear.ipynb)\n",
     "- [Diel cycle per month](Plotting/DielCycle.ipynb) (for calculating diel cycles without plotting see Resampling/[Calculate diel cycles](Resampling/ResamplingDielCycle.ipynb))\n",
-    "- <b><span style=\"color:#66BB6A;background-color:#E8F5E9;\">UPDATED in v0.87.0!</span></b> [Heatmap showing values (z) of time series as date (y) vs time (x)](Plotting/HeatmapDateTime.ipynb)\n",
-    "- <b><span style=\"color:#66BB6A;background-color:#E8F5E9;\">UPDATED in v0.87.0!</span></b> [Heatmap showing values (z) of time series as year (y) vs month (x)](Plotting/HeatmapYearMonth.ipynb)\n",
+    "- <b><span style=\"color:#66BB6A;background-color:#E8F5E9;\">UPDATED in v0.87.0!</span></b> [Heatmap datetime plot](Plotting/HeatmapDateTime.ipynb): show values (z) of time series as date (y) vs time (x)\n",
+    "- <b><span style=\"color:#66BB6A;background-color:#E8F5E9;\">UPDATED in v0.87.0!</span></b> [Heatmap year/month plot](Plotting/HeatmapYearMonth.ipynb): show values (z) of time series as year (y) vs month (x)\n",
+    "- <b><span style=\"color:#F4511E;background-color:#FFECB3;\">NEW in v0.87.0!</span></b> [Heatmap rank plot](Plotting/HeatmapYearMonthRank.ipynb): show *ranks* of values (z) of time series as year (y) vs month (x)\n",
     "- [Histogram with options to show z-scores, highlight peak distribution, show counts](Plotting/Histogram.ipynb)\n",
     "- [Long-term anomalies per year](Plotting/LongTermAnomalies.ipynb)\n",
     "- <b><span style=\"color:#F4511E;background-color:#FFECB3;\">NEW in v0.86.0!</span></b> [Ridgeline plot](Plotting/RidgeLine.ipynb)\n",
@@ -492,7 +493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
