Heatmap rank notebook

--- a/notebooks/Plotting/HeatmapDateTime.ipynb
+++ b/notebooks/Plotting/HeatmapDateTime.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "d394b82d-fad4-4f52-9a36-7086c176846d",
    "metadata": {
     "ExecuteTime": {
@@ -132,9 +132,83 @@
      "start_time": "2024-08-22T13:26:37.847317Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class HeatmapDateTime in module diive.core.plotting.heatmap_datetime:\n",
+      "\n",
+      "class HeatmapDateTime(diive.core.plotting.heatmap_base.HeatmapBase)\n",
+      " |  HeatmapDateTime(series: pandas.core.series.Series, fig=None, ax=None, title: str = None, vmin: float = None, vmax: float = None, cb_digits_after_comma: int = 2, cb_labelsize: float = 16, axlabels_fontsize: float = 16, ticks_labelsize: float = 16, minyticks: int = 3, maxyticks: int = 10, cmap: str = 'RdYlBu_r', color_bad: str = 'grey', zlabel: str = 'Value', figsize: tuple = (6, 10.7), verbose: bool = False)\n",
+      " |  \n",
+      " |  Method resolution order:\n",
+      " |      HeatmapDateTime\n",
+      " |      diive.core.plotting.heatmap_base.HeatmapBase\n",
+      " |      builtins.object\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __init__(self, series: pandas.core.series.Series, fig=None, ax=None, title: str = None, vmin: float = None, vmax: float = None, cb_digits_after_comma: int = 2, cb_labelsize: float = 16, axlabels_fontsize: float = 16, ticks_labelsize: float = 16, minyticks: int = 3, maxyticks: int = 10, cmap: str = 'RdYlBu_r', color_bad: str = 'grey', zlabel: str = 'Value', figsize: tuple = (6, 10.7), verbose: bool = False)\n",
+      " |      Plot heatmap of time series data with date on y-axis and time on x-axis.\n",
+      " |      \n",
+      " |      Args:\n",
+      " |          series: Series\n",
+      " |          ax: Axis in which heatmap is shown. If *None*, a figure with axis will be generated.\n",
+      " |          title: Text shown at the top of the plot.\n",
+      " |          vmin: Minimum value shown in plot\n",
+      " |          vmax: Maximum value shown in plot\n",
+      " |          cb_digits_after_comma: How many digits after the comma are shown in the colorbar legend.\n",
+      " |          cmap: Matplotlib colormap\n",
+      " |          color_bad: Color of missing values\n",
+      " |  \n",
+      " |  plot(self)\n",
+      " |      Plot heatmap\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Methods inherited from diive.core.plotting.heatmap_base.HeatmapBase:\n",
+      " |  \n",
+      " |  export_borderless_heatmap(self, outpath: str)\n",
+      " |      Save borderless plots (b/w heightmap and texture) for Blender render.\n",
+      " |  \n",
+      " |  format(self, ax_xlabel_txt, ax_ylabel_txt, plot)\n",
+      " |  \n",
+      " |  get_ax(self)\n",
+      " |      Return axis in which plot was generated.\n",
+      " |  \n",
+      " |  get_plot_data(self) -> pandas.core.frame.DataFrame\n",
+      " |      Return pivot dataframe used to plot the heatmap.\n",
+      " |  \n",
+      " |  setup(self)\n",
+      " |  \n",
+      " |  show(self)\n",
+      " |      Generate plot and show figure.\n",
+      " |  \n",
+      " |  show_vals_in_plot(self)\n",
+      " |  \n",
+      " |  transform_data(self, xaxis_vals, yaxis_vals)\n",
+      " |      Transform data for plotting\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Static methods inherited from diive.core.plotting.heatmap_base.HeatmapBase:\n",
+      " |  \n",
+      " |  set_cmap(cmap, color_bad, z)\n",
+      " |      Set colormap and color of missing values\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors inherited from diive.core.plotting.heatmap_base.HeatmapBase:\n",
+      " |  \n",
+      " |  __dict__\n",
+      " |      dictionary for instance variables\n",
+      " |  \n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# help(dv.heatmapdatetime)"
+    "help(dv.heatmapdatetime)"
    ]
   },
   {
@@ -155,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "b8df9b16-1f15-4a57-b475-83f417815538",
    "metadata": {
     "ExecuteTime": {
@@ -168,7 +242,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded .parquet file F:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.059 seconds).\n",
+      "Loaded .parquet file F:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.044 seconds).\n",
       "    --> Detected time resolution of <30 * Minutes> / 30min \n"
      ]
     },
@@ -190,7 +264,7 @@
        "Freq: 30min, Name: Tair_f, Length: 175296, dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "f97b0670-5a15-46a6-961f-ab439252bf5a",
    "metadata": {
     "ExecuteTime": {
@@ -245,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "1d0d90b2-1c8d-4443-ac7e-1c87c99fc5af",
    "metadata": {
     "ExecuteTime": {
@@ -284,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "bf7985bc-d334-49ca-bae3-4a3d75fe1aa0",
    "metadata": {
     "ExecuteTime": {
@@ -299,7 +373,7 @@
        "<Axes: title={'center': 'Half-hourly data'}, xlabel='Time (hours)', ylabel='Date'>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "1ef8a3d5-a230-4f94-bd46-0b9720bd0970",
    "metadata": {
     "ExecuteTime": {
@@ -814,7 +888,7 @@
        "[3652 rows x 48 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "b50cdc94-ce8a-47f3-8177-a64da15f3af8",
    "metadata": {
     "ExecuteTime": {
@@ -896,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "c3c130bf-76f0-47e4-b6d2-18abf07154ab",
    "metadata": {
     "ExecuteTime": {
@@ -934,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "2f289671-6c45-49b5-8a34-04825616b5e3",
    "metadata": {
     "ExecuteTime": {
@@ -1078,7 +1152,7 @@
        "[3652 rows x 4 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "5f3194d4-59ed-4d45-90fa-2d797445d24d",
    "metadata": {
     "ExecuteTime": {
@@ -1159,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "b5a0327f-2b5c-41f4-8303-d0dddcedef25",
    "metadata": {
     "ExecuteTime": {
@@ -1227,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "858aa379-5643-4afe-b53f-eb370dee2835",
    "metadata": {
     "ExecuteTime": {
@@ -1241,7 +1315,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished 2025-03-23 02:53:51\n"
+      "Finished 2025-03-24 23:15:41\n"
      ]
     }
    ],
