--- a/notebooks/Plotting/HeatmapYearMonth.ipynb
+++ b/notebooks/Plotting/HeatmapYearMonth.ipynb
@@ -131,9 +131,88 @@
      "start_time": "2024-08-22T13:27:25.457444Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class HeatmapYearMonth in module diive.core.plotting.heatmap_datetime:\n",
+      "\n",
+      "class HeatmapYearMonth(diive.core.plotting.heatmap_base.HeatmapBase)\n",
+      " |  HeatmapYearMonth(series_monthly: pandas.core.series.Series, fig=None, ax=None, title: str = None, vmin: float = None, vmax: float = None, cb_digits_after_comma: int = 2, cb_labelsize: float = 16, axlabels_fontsize: float = 16, ticks_labelsize: float = 16, minyticks: int = 3, maxyticks: int = 10, cmap: str = 'RdYlBu_r', color_bad: str = 'grey', zlabel: str = 'Value', figsize: tuple = (6, 10.7), verbose: bool = False, show_values: bool = False, show_values_n_dec_places: int = 0)\n",
+      " |  \n",
+      " |  # @ConsoleOutputDecorator(spacing=False)\n",
+      " |  \n",
+      " |  Method resolution order:\n",
+      " |      HeatmapYearMonth\n",
+      " |      diive.core.plotting.heatmap_base.HeatmapBase\n",
+      " |      builtins.object\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __init__(self, series_monthly: pandas.core.series.Series, fig=None, ax=None, title: str = None, vmin: float = None, vmax: float = None, cb_digits_after_comma: int = 2, cb_labelsize: float = 16, axlabels_fontsize: float = 16, ticks_labelsize: float = 16, minyticks: int = 3, maxyticks: int = 10, cmap: str = 'RdYlBu_r', color_bad: str = 'grey', zlabel: str = 'Value', figsize: tuple = (6, 10.7), verbose: bool = False, show_values: bool = False, show_values_n_dec_places: int = 0)\n",
+      " |      Plot heatmap of time series data with year on y-axis and month on x-axis.\n",
+      " |      \n",
+      " |      Args:\n",
+      " |          series_monthly: Series in monthly time resolution.\n",
+      " |          ax: Axis in which heatmap is shown. If *None*, a figure with axis will be generated.\n",
+      " |          title: Text shown at the top of the plot.\n",
+      " |          vmin: Minimum value shown in plot\n",
+      " |          vmax: Maximum value shown in plot\n",
+      " |          cb_digits_after_comma: How many digits after the comma are shown in the colorbar legend.\n",
+      " |          cmap: Matplotlib colormap\n",
+      " |          color_bad: Color of missing values\n",
+      " |          show_values: Show z-values in plot.\n",
+      " |          show_values_n_dec_places: Number of decimal places to show in heatmap.\n",
+      " |              Only considered if *show_values* is True.\n",
+      " |  \n",
+      " |  plot(self)\n",
+      " |      Plot heatmap\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Methods inherited from diive.core.plotting.heatmap_base.HeatmapBase:\n",
+      " |  \n",
+      " |  export_borderless_heatmap(self, outpath: str)\n",
+      " |      Save borderless plots (b/w heightmap and texture) for Blender render.\n",
+      " |  \n",
+      " |  format(self, ax_xlabel_txt, ax_ylabel_txt, plot)\n",
+      " |  \n",
+      " |  get_ax(self)\n",
+      " |      Return axis in which plot was generated.\n",
+      " |  \n",
+      " |  get_plot_data(self) -> pandas.core.frame.DataFrame\n",
+      " |      Return pivot dataframe used to plot the heatmap.\n",
+      " |  \n",
+      " |  setup(self)\n",
+      " |  \n",
+      " |  show(self)\n",
+      " |      Generate plot and show figure.\n",
+      " |  \n",
+      " |  show_vals_in_plot(self)\n",
+      " |  \n",
+      " |  transform_data(self, xaxis_vals, yaxis_vals)\n",
+      " |      Transform data for plotting\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Static methods inherited from diive.core.plotting.heatmap_base.HeatmapBase:\n",
+      " |  \n",
+      " |  set_cmap(cmap, color_bad, z)\n",
+      " |      Set colormap and color of missing values\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors inherited from diive.core.plotting.heatmap_base.HeatmapBase:\n",
+      " |  \n",
+      " |  __dict__\n",
+      " |      dictionary for instance variables\n",
+      " |  \n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# help(dv.heatmapyearmonth)"
+    "help(dv.heatmapyearmonth)"
    ]
   },
   {
@@ -167,7 +246,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded .parquet file F:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.041 seconds).\n",
+      "Loaded .parquet file F:\\Sync\\luhk_work\\20 - CODING\\21 - DIIVE\\diive\\diive\\configs\\exampledata\\exampledata_PARQUET_CH-DAV_FP2022.5_2013-2022_ID20230206154316_30MIN.parquet (0.045 seconds).\n",
       "    --> Detected time resolution of <30 * Minutes> / 30min \n"
      ]
     },
@@ -732,8 +811,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>mean</th>\n",
        "      <th>max</th>\n",
+       "      <th>mean</th>\n",
        "      <th>ptp</th>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -746,32 +825,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2013-01-01</th>\n",
-       "      <td>-4.127289</td>\n",
        "      <td>7.800</td>\n",
+       "      <td>-4.127289</td>\n",
        "      <td>25.300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2013-02-01</th>\n",
-       "      <td>-7.613169</td>\n",
        "      <td>5.167</td>\n",
+       "      <td>-7.613169</td>\n",
        "      <td>23.400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2013-03-01</th>\n",
-       "      <td>-1.802983</td>\n",
        "      <td>9.100</td>\n",
+       "      <td>-1.802983</td>\n",
        "      <td>25.367</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2013-04-01</th>\n",
-       "      <td>3.542244</td>\n",
        "      <td>15.267</td>\n",
+       "      <td>3.542244</td>\n",
        "      <td>26.900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2013-05-01</th>\n",
-       "      <td>4.567939</td>\n",
        "      <td>15.367</td>\n",
+       "      <td>4.567939</td>\n",
        "      <td>19.067</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -782,32 +861,32 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-08-01</th>\n",
-       "      <td>13.990134</td>\n",
        "      <td>25.270</td>\n",
+       "      <td>13.990134</td>\n",
        "      <td>18.953</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-09-01</th>\n",
-       "      <td>7.777842</td>\n",
        "      <td>22.087</td>\n",
+       "      <td>7.777842</td>\n",
        "      <td>23.340</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-10-01</th>\n",
-       "      <td>9.117476</td>\n",
        "      <td>19.460</td>\n",
+       "      <td>9.117476</td>\n",
        "      <td>18.263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-11-01</th>\n",
-       "      <td>1.759813</td>\n",
        "      <td>13.493</td>\n",
+       "      <td>1.759813</td>\n",
        "      <td>19.870</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-12-01</th>\n",
-       "      <td>-1.577778</td>\n",
        "      <td>10.667</td>\n",
+       "      <td>-1.577778</td>\n",
        "      <td>25.740</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -816,19 +895,19 @@
        "</div>"
       ],
       "text/plain": [
-       "                       mean     max     ptp\n",
+       "                     max       mean     ptp\n",
        "TIMESTAMP_MIDDLE                           \n",
-       "2013-01-01        -4.127289   7.800  25.300\n",
-       "2013-02-01        -7.613169   5.167  23.400\n",
-       "2013-03-01        -1.802983   9.100  25.367\n",
-       "2013-04-01         3.542244  15.267  26.900\n",
-       "2013-05-01         4.567939  15.367  19.067\n",
-       "...                     ...     ...     ...\n",
-       "2022-08-01        13.990134  25.270  18.953\n",
-       "2022-09-01         7.777842  22.087  23.340\n",
-       "2022-10-01         9.117476  19.460  18.263\n",
-       "2022-11-01         1.759813  13.493  19.870\n",
-       "2022-12-01        -1.577778  10.667  25.740\n",
+       "2013-01-01         7.800  -4.127289  25.300\n",
+       "2013-02-01         5.167  -7.613169  23.400\n",
+       "2013-03-01         9.100  -1.802983  25.367\n",
+       "2013-04-01        15.267   3.542244  26.900\n",
+       "2013-05-01        15.367   4.567939  19.067\n",
+       "...                  ...        ...     ...\n",
+       "2022-08-01        25.270  13.990134  18.953\n",
+       "2022-09-01        22.087   7.777842  23.340\n",
+       "2022-10-01        19.460   9.117476  18.263\n",
+       "2022-11-01        13.493   1.759813  19.870\n",
+       "2022-12-01        10.667  -1.577778  25.740\n",
        "\n",
        "[120 rows x 3 columns]"
       ]
@@ -973,7 +1052,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished 2025-03-23 02:14:18\n"
+      "Finished 2025-03-24 23:15:16\n"
      ]
     }
    ],
@@ -1012,7 +1091,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.11"
   },
   "toc-autonumbering": false
  },
