--- a/notebooks/Analyses/DecouplingSortingBins.ipynb
+++ b/notebooks/Analyses/DecouplingSortingBins.ipynb
@@ -340,11 +340,11 @@
    "outputs": [],
    "source": [
     "sbm = SortingBinsMethod(df=df,\n",
-    "                        var1_col=ta_col,\n",
+    "                        zvar=ta_col,\n",
     "                        var2_col=swin_col,\n",
-    "                        var3_col=vpd_col,\n",
-    "                        n_bins_var1=5,\n",
-    "                        n_subbins_var2=10,\n",
+    "                        yvar=vpd_col,\n",
+    "                        n_bins_z=5,\n",
+    "                        n_bins_x=10,\n",
     "                        convert_to_percentiles=False)\n",
     "sbm.calcbins()"
    ]
@@ -394,9 +394,7 @@
     }
    },
    "outputs": [],
-   "source": [
-    "binmedians = sbm.get_binmedians()"
-   ]
+   "source": "binmedians = sbm.get_binaggs()"
   },
   {
    "cell_type": "markdown",
