Added conversion to z-scores

--- a/notebooks/Analyses/DecouplingSortingBins.ipynb
+++ b/notebooks/Analyses/DecouplingSortingBins.ipynb
@@ -345,7 +345,7 @@
     "                        yvar=vpd_col,\n",
     "                        n_bins_z=5,\n",
     "                        n_bins_x=10,\n",
-    "                        convert_to_percentiles=False)\n",
+    "                        conversion=False)\n",
     "sbm.calcbins()"
    ]
   },
