--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated**: 24 Mar 2025  \n",
+    "**Last updated**: 16 May 2025  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -53,7 +53,7 @@
    "metadata": {},
    "source": [
     "- [Daily correlation between two time series](Analyses/DailyCorrelation.ipynb)\n",
-    "- [Decoupling: Sorting bins method](Analyses/DecouplingSortingBins.ipynb)\n",
+    "- <b><span style=\"color:#66BB6A;background-color:#E8F5E9;\">UPDATED in v0.87.0!</span></b> [Decoupling: Sorting bins method](Analyses/DecouplingSortingBins.ipynb)\n",
     "- [Find gaps in time series](Analyses/GapFinder.ipynb)\n",
     "- [Histogram calculation](Analyses/Histogram.ipynb)\n",
     "- [Percentiles](Analyses/Percentiles.ipynb)\n",
