--- a/notebooks/Corrections/MeasurementOffset.ipynb
+++ b/notebooks/Corrections/MeasurementOffset.ipynb
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Background**"
+    "# **Description**"
    ]
   },
   {
@@ -578,7 +578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
