--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -113,6 +113,7 @@
    "metadata": {},
    "source": [
     "- [Find and correct offset between two time series](Corrections/MeasurementOffset.ipynb)\n",
+    "- <b><span style=\"color:#F4511E;background-color:#FFECB3;\">NEW in v0.87.1!</span></b> [Set exact values to missing](Corrections/SetExactValuesToMissing.ipynb)\n",
     "- [Wind direction offset correction](Corrections/WindDirectionOffset.ipynb)"
    ]
   },
