Add setto_missing to meteoscreening from db

--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated**: 16 May 2025  \n",
+    "**Last updated**: 6 Jun 2025  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -251,7 +251,7 @@
    "id": "db13d0fc-6ee4-4bec-a768-d5464513b0d6",
    "metadata": {},
    "source": [
-    "- [Step-wise quality screening of meteo data from database](MeteoScreening/StepwiseMeteoScreeningFromDatabase.ipynb): Example of how `diive` is used to quality-screen meteorological data using a direct connection to a database. In this case, the database used is [InfluxDB](https://www.influxdata.com/).\n",
+    "- <b><span style=\"color:#66BB6A;background-color:#E8F5E9;\">UPDATED in v0.87.1!</span></b> [Step-wise quality screening of meteo data from database](MeteoScreening/StepwiseMeteoScreeningFromDatabase.ipynb): Example of how `diive` is used to quality-screen meteorological data using a direct connection to a database. In this case, the database used is [InfluxDB](https://www.influxdata.com/).\n",
     "- Flux quality-screening is part of the Flux Processing Chain (see above)."
    ]
   },
