--- a/notebooks/Plotting/Cumulative.ipynb
+++ b/notebooks/Plotting/Cumulative.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "<span style='font-size:40px; display:block;'>\n",
     "<b>\n",
-    "    Cumulatives per year\n",
+    "    Cumulative across all data\n",
     "</b>\n",
     "</span>"
    ]
