Homogenize heatmap year month with ranks

--- a/notebooks/Plotting/HeatmapYearMonth.ipynb
+++ b/notebooks/Plotting/HeatmapYearMonth.ipynb
@@ -384,7 +384,7 @@
    ],
    "source": [
     "hm = dv.heatmapyearmonth(\n",
-    "    series_monthly=series_monthly_means,\n",
+    "    series=series_monthly_means,\n",
     "    title=\"Mean air temperature\",\n",
     "    zlabel=\"°C\",\n",
     "    cb_digits_after_comma=0,\n",
@@ -732,7 +732,7 @@
    ],
    "source": [
     "hm = dv.heatmapyearmonth(\n",
-    "    series_monthly=series_monthly_means, \n",
+    "    series=series_monthly_means,\n",
     "    fig=None, \n",
     "    ax=None, \n",
     "    title=\"Mean air temperature\",\n",
@@ -1001,9 +1001,9 @@
     "ax_max = fig.add_subplot(gs[0, 1])\n",
     "ax_range = fig.add_subplot(gs[0, 2])\n",
     "\n",
-    "dv.heatmapyearmonth(ax=ax_mean, series_monthly=aggs['mean'], zlabel=\"\", cb_digits_after_comma=0).plot()\n",
-    "dv.heatmapyearmonth(ax=ax_max, series_monthly=aggs['max'], zlabel=\"\", cb_digits_after_comma=0).plot()\n",
-    "dv.heatmapyearmonth(ax=ax_range, series_monthly=aggs['ptp'], zlabel=\"\", cb_digits_after_comma=0).plot()\n",
+    "dv.heatmapyearmonth(ax=ax_mean, series=aggs['mean'], zlabel=\"\", cb_digits_after_comma=0).plot()\n",
+    "dv.heatmapyearmonth(ax=ax_max, series=aggs['max'], zlabel=\"\", cb_digits_after_comma=0).plot()\n",
+    "dv.heatmapyearmonth(ax=ax_range, series=aggs['ptp'], zlabel=\"\", cb_digits_after_comma=0).plot()\n",
     "\n",
     "ax_mean.set_title(\"Air temperature mean\", color='black')\n",
     "ax_max.set_title(\"Air temperature max\", color='black')\n",
