--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated**: 6 Jun 2025  \n",
+    "**Last updated**: 25 Jun 2025  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -326,9 +326,8 @@
     "- [Cumulative sums across all data](Plotting/Cumulative.ipynb)\n",
     "- [Cumulatives per year](Plotting/CumulativesPerYear.ipynb)\n",
     "- [Diel cycle per month](Plotting/DielCycle.ipynb) (for calculating diel cycles without plotting see Resampling/[Calculate diel cycles](Resampling/ResamplingDielCycle.ipynb))\n",
-    "- <b><span style=\"color:#66BB6A;background-color:#E8F5E9;\">UPDATED in v0.87.0!</span></b> [Heatmap datetime plot](Plotting/HeatmapDateTime.ipynb): show values (z) of time series as date (y) vs time (x)\n",
-    "- <b><span style=\"color:#66BB6A;background-color:#E8F5E9;\">UPDATED in v0.87.0!</span></b> [Heatmap year/month plot](Plotting/HeatmapYearMonth.ipynb): show values (z) of time series as year (y) vs month (x)\n",
-    "- <b><span style=\"color:#F4511E;background-color:#FFECB3;\">NEW in v0.87.0!</span></b> [Heatmap rank plot](Plotting/HeatmapYearMonthRank.ipynb): show *ranks* of values (z) of time series as year (y) vs month (x)\n",
+    "- <b><span style=\"color:#66BB6A;background-color:#E8F5E9;\">UPDATED in v0.88.0!</span></b> [Heatmap datetime plot](Plotting/HeatmapDateTime.ipynb): show values (z) of time series as date vs time\n",
+    "- <b><span style=\"color:#66BB6A;background-color:#E8F5E9;\">UPDATED in v0.88.0!</span></b> [Heatmap year/month plot](Plotting/HeatmapYearMonth.ipynb): show values or ranks of values (z) of time series as year vs month\n",
     "- [Histogram with options to show z-scores, highlight peak distribution, show counts](Plotting/Histogram.ipynb)\n",
     "- [Long-term anomalies per year](Plotting/LongTermAnomalies.ipynb)\n",
     "- <b><span style=\"color:#F4511E;background-color:#FFECB3;\">NEW in v0.86.0!</span></b> [Ridgeline plot](Plotting/RidgeLine.ipynb)\n",
