Update heatmap notebooks

--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Last updated**: 25 Jun 2025  \n",
+    "**Last updated**: 26 Jun 2025  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)  \n",
     "Overview of example notebooks for the time series processing library `diive`."
    ]
@@ -57,7 +57,7 @@
     "- [Find gaps in time series](Analyses/GapFinder.ipynb)\n",
     "- [Histogram calculation](Analyses/Histogram.ipynb)\n",
     "- [Percentiles](Analyses/Percentiles.ipynb)\n",
-    "- [z-aggregates in quantiles (classes) of x and y](Analyses/CalculateZaggregatesInQuantileClassesOfXY.ipynb)"
+    "- <b><span style=\"color:#66BB6A;background-color:#E8F5E9;\">UPDATED in v0.88.0!</span></b> [Quantile grid aggregator](Analyses/QuantileGridAggregator.ipynb): Calculates aggregated values of a target variable (z) within a 2D grid defined by quantiles of two independent variables (x and y)."
    ]
   },
   {
