--- a/notebooks/Plotting/HeatmapDateTime.ipynb
+++ b/notebooks/Plotting/HeatmapDateTime.ipynb
@@ -13,11 +13,7 @@
    "id": "27e8903b-32cb-4652-8e40-da0cd86a1a2a",
    "metadata": {},
    "source": [
-    "# **Heatmap per date and time**\n",
-    "```\n",
-    "import diive as dv\n",
-    "dv.heatmapdatetime()\n",
-    "```"
+    "# **Heatmap per date and time**"
    ]
   },
   {
@@ -26,13 +22,40 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Notebook version**: `3` (25 Jun 2025)  \n",
+    "**Notebook version**: `3` (26 Jun 2025)  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "28a4631a-a44c-45b2-93c6-b915dd872584",
+   "metadata": {},
+   "source": [
+    "</br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49ac7b88-e9cb-408d-89ff-cd8ab6c7e53e",
+   "metadata": {},
+   "source": [
+    "# **General usage**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78608a20-6545-4dc1-bf81-b8f55139d0b6",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "import diive as dv\n",
+    "dv.heatmapdatetime()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc33179a-11c1-41fb-93e8-458c60b7c84f",
    "metadata": {},
    "source": [
     "</br>"
