--- a/notebooks/Plotting/HeatmapYearMonth.ipynb
+++ b/notebooks/Plotting/HeatmapYearMonth.ipynb
@@ -13,11 +13,7 @@
    "id": "7dacfcee-bfcd-43d2-92bd-c433856f82cf",
    "metadata": {},
    "source": [
-    "# **Heatmap per year and month**\n",
-    "```\n",
-    "import diive as dv\n",
-    "dv.heatmapyearmonth()\n",
-    "```"
+    "# **Heatmap per year and month**"
    ]
   },
   {
@@ -26,13 +22,40 @@
    "metadata": {},
    "source": [
     "---\n",
-    "**Notebook version**: `3` (25 Jun 2025)  \n",
+    "**Notebook version**: `3` (26 Jun 2025)  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "28a4631a-a44c-45b2-93c6-b915dd872584",
+   "metadata": {},
+   "source": [
+    "</br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7db30ed4-ea10-4ef9-a1f3-f600e8532069",
+   "metadata": {},
+   "source": [
+    "# **General usage**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87fda689-37b5-40fc-811a-7d3a5255d745",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "import diive as dv\n",
+    "dv.heatmapyearmonth()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f77ef3a8-7791-421c-82a0-51d66b5ed95f",
    "metadata": {},
    "source": [
     "</br>"
